fixed pic bug on mobile

--- a/main.css
+++ b/main.css
@@ -12,14 +12,6 @@ footer {
   background-color: #fff;
   color: #333;
 }
-/* 
-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 2;
-} */
 
 header {
   padding: 12% 0;
